# crypto

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.md  config.py  dbutil.py  pipeline.md  pyproject.toml  response.md
etl/: dev_activity.py  export_schedules.ts  funding.py  futures.py  listings.py  macro.py  marketcap.py  prices.py  prices_raw.py  stablecoins.py  universe.py  unlocks.py
notebooks/: factor_diagnostics.ipynb  portfolio.ipynb  signal_analysis.ipynb
research/: __init__.py
research/lib/: discovered.py  portfolio_opt.py  signal_eval.py  spaces.py
research/portfolio/: __init__.py  walk_forward.py  walk_forward_analysis.py
research/signals/: README.md  __init__.py  agent.md  data.py  discovery.py  enumeration.py  evaluate.py  event_study.py  generation.py  inspect_discovery.py  promotion.py  prompt.md  search.py  signal.md  signal_lab.py
research/signals/agent/: agent.md  backtest.py  data.py  discovery.py  generation.py  inspect_discovery.py  promotion.py  run_discovery.py  (+1 more)
risk_model/: README.md  factor_returns.py  features.py  residual_returns.py
risk_model/lib/: __init__.py  features_futures.py
tests/: choose_checks.py  cost_model_checks.py  curve_checks.py  discovered_bridge_checks.py  discovery_checks.py  enumeration_checks.py  event_study_checks.py  macro_feature_checks.py  membership_extension_checks.py  new_feature_checks.py  participation_cap_checks.py  portfolio_trade_rate_checks.py  promotion_pooling_checks.py  sanity_checks.py  slow_data_checks.py  walk_forward_consistency_checks.py  walk_forward_selection_speedups_checks.py
